scss/_header.scss
/* ... */
.subnav-wrapper {
	position: absolute;
	top: 100%;
	left: 0;
	width: 100%;
	z-index: 99;
	opacity: 0;
	visibility: hidden;
	@include transition(all 0.4s cubic-bezier(1, 0, 0, 1));
	margin-top: -100%;

	&.is-open {
		opacity: 1;
		visibility: visible;
		margin-top: 0;
	}
	.first-layer {
		background: $coDarkBlue;
		padding: 24px 0;
	}

	.second-layer {
		background: $coBlue;
	}

	.nav-box-card {

	}

	.box-menu {
		color: $coWhite;
		margin: 0px -15px;
		display: flex;


		&:after {
			content:'';
			display: block;
			float: none;
			clear: both;
		}

		li {
			width: 25%;
			float: left;
			border: 1px solid $coWhite;
			border-radius: 12px;
			margin: 0px 15px;
			position: relative;
			display: flex;
			flex: 1;
			max-width: 210px;

			&:hover {

				&:before {
					opacity: 1;
					width: 100%;
					@include transform(scale(1));
				}
			}

			&:before {
				content:'';
				width: 0;
				height: 100%;
				position: absolute;
				top: 0;
				left: 0;
				z-index: 1;
				opacity: 0;
				@include transition(all 0.3s linear);
				border-radius: 12px;

				@extend .gradient-wrap;
			}
		}
	}

	.fl-title {
		font-weight: 300;
		font-family: $defaultFont;
		margin-bottom: 15px;
		text-transform: uppercase;
		color: $coWhite;
	}

	.f-menu {
		padding-left: 0;
		padding-top: 25px;
		padding-bottom: 25px;
		width: 100%;
		float: none;


		.fm-title {
			font-weight: 300;
			margin-right: 30px;
		}

		ul {
			margin-right: 30px;

			li {

				a {
					font-weight: 500;
					letter-spacing: 0.5px;
					text-transform: uppercase;

					&:before {
						background: $coGreen;
					}
				}
			}
		}
	}


	.nav-box-card {
		display: flex;
		flex: 1;
		background: transparent;
		position: relative;
		overflow: hidden;
		color: $coWhite;
		text-decoration: none;
		padding: 9px 14px;
		width: 100%;
		flex-direction: column;
		height: 100%;
		z-index: 102;

		p {
			margin-bottom: 5px;
			z-index: 2;
			position: relative;

			strong {
				font-weight: 500;
				letter-spacing: 0.5px;
				text-transform: uppercase;
			}
		}

	}
}

.cross-close {
	position: relative;
	width: 20px;
    height: 25px;
    float: right;
    margin-top: -20px;
    cursor: pointer;

	&:before {
		content:'';
		display: block;
		width: 3px;
		height: 15px;
		border-radius: 3px;
		position: absolute;
		top: 5px;
		left: 8px;
		background: $coOrange;
		border: none;
		@include transform(rotate(45deg));
	}

	&:after {
		content:'';
		display: block;
		width: 3px;
		height: 15px;
		border-radius: 3px;
		background: $coOrange;
		border: none;
		@include transform(rotate(-45deg));
		position: absolute;
		top: 5px;
		left: 8px;
	}
}

.hamburger-nav {
	position: fixed;
	top: 0;
	right: -100%;
	height: 100%;
	width: 100%;
	z-index: 1003;
	@include transition(all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1));

	@include breakpoint(tablet) {
		top: 80px;
	}

	@include breakpoint(tablet2) {
		top: 60px;
		right: 0;
		@include transform(translate(0, -100%));
	}

	&.revealed {
		right: 0;
		@include transform(translate(0, 0));

		&:before {
			visibility: visible;
			opacity: 1;
			right: 100%;
		}

		.hv-close {
			visibility: visible;
			opacity: 1;
			@include transform(scale(1));

		}

		.hv-wrap.hv-wrap-mobile {

			@include transform(translate(0, 0));
		}
	}

	&:before {
		content: '';
	    width: 300%;
	    height: 100%;
	    right: 0;
	    position: absolute;
	    visibility: hidden;
	    opacity: 0;
	    top: 0;
	    background: rgba($coBlack, 0.7);
	    @include transition(opacity 0.4s 0.4s ease);
	}

	.hv-wrap {
		max-width: 320px;
	    background: $coGreen;
	    position: relative;
	    height: 100%;
	    float: right;
	    width: 100%;
	    padding: 30px 25px;
	    overflow-y: auto;
	    overflow-x: hidden;
		padding-bottom: 60px;
		max-height: 100%;
		z-index: 10;

		@include breakpoint(tablet) {
			max-width: 280px;
			display: none;
		}

		&.hv-wrap-mobile {
			padding: 15px 15px 30px;
			display: none;
			background: #1a99d7;
			top: 0px;
			right: 0;

			@include transition(transform 0.4s cubic-bezier(0.645, 0.045, 0.355, 1));

			@include breakpoint(tablet2) {
				@include transform(translate(0, -100%));
			}


			@include breakpoint(tablet) {
				display: block;
			}

			@include breakpoint(tablet2) {
				max-width: 100%;
			}
		}
	}


}

.hv-logo {
	max-width: 140px;
	margin-bottom: 15px;

	a {
		display: block;

		img {
			max-width: 100%;
			display: block;
			height: auto;
		}
	}
}


.hv-wrap {

	ul {


		> li {
			display: block;



			a {
				text-transform: uppercase;
				color: $coWhite;
				text-decoration: none;
				font-weight: 500;
				padding: 10px 0;
				display: inline-block;
			}

			&.has-sub {
				position: relative;

				ul  {
					display: none;
				}
			}
		}


	}

	hr {
		border: none;
		border-top: 1px solid $coWhite;
		margin: 50px 0;
	}
}

#menu-main-menuen {

	> li {
		opacity: 0;
		top: 25px;
		@include transition(all 0s cubic-bezier(0.645, 0.045, 0.355, 1));
		position: relative;

		&.is-open {
			top: 0;
			opacity: 1;
			@include transition(all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1));
		}
	}
}
/* ... */

